# CCTaskTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: gl_include.hpp  logging.hpp  main.cpp
app/src/glad/: glad.c  glad.h
